# DX11

./: .gitignore  3d_math.cpp  3d_math.h  CMakeLists.txt  CMakePresets.json  NatvisFile.natvis  README.txt  TODO.md  assert.h  batch_render_helper.cpp  camera.cpp  camera.h  camera_base.cpp  camera_base.h  color.ps  color.vs  color_shader.cpp  color_shader.h  constant_buffer.cpp  constant_buffer.h  cube.cpp  cube.fx  cube.h  cube.ps  cube.vs  d3dclass.cpp  d3dclass.h  default_object_constant_buffer.h  depth_stencil_view.h  dx11test.cpp  dx11test.h  frame_timer.cpp  frame_timer.h  game_application.cpp  game_application.h  game_object.cpp  game_object.h  geometry_shader.cpp  graphics.cpp  graphics.h  (+62 more)
assets/Character/: XBot.fbx
shaders/: character_vertex.fx  default_frag.fx  default_object.fx  default_vertex.fx  shadow_map.fx  shared_definitions.fx
src/: 3d_math.cpp  CMakeLists.txt  assert.cpp  assert.h  batch_render_helper.h  camera_base.cpp  camera_base.h  constant_buffer.h  cube.cpp  cube.h  d3dclass.cpp  default_object_constant_buffer.h  depth_stencil_view.cpp  game_application.cpp  game_application.h  game_object.h  graphics_enums.h  index_buffer.h  input_handler_types.h  light_source.h  matrix.h  mesh.cpp  orthographic_camera.cpp  perspective_camera.cpp  perspective_camera.h  render_context.cpp  render_packet.cpp  sampler_state.cpp  systemclass.cpp  texture.cpp  texture_view.cpp  vector.h  vertex_buffer.cpp  vertex_buffer.h  world.h
src/core/: CMakeLists.txt
src/core/include/core/: 3d_math.h  graphic_defines.h  matrix.h  misc_math.h  quaternion.h  vector.h
src/core/src/: 3d_math.cpp  misc_math.cpp  quaternion.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/graphics/: batch_render_helper.h  constant_buffer.h  d3dclass.h  default_object_constant_buffer.h  depth_stencil_view.h  geometry_shader.h  graphic_resources.h  graphics.h  graphics_enums.h  index_buffer.h  material.h  mesh.h  mesh_loader.h  pixel_shader.h  render_context.h  render_packet.h  render_target_view.h  sampler_state.h  shadow_handler.h  texture.h  texture_view.h  vertex_buffer.h  vertex_shader.h
src/graphics/src/: batch_render_helper.cpp  constant_buffer.cpp  d3dclass.cpp  depth_stencil_view.cpp  geometry_shader.cpp  graphics.cpp  index_buffer.cpp  mesh.cpp  mesh_loader.cpp  pixel_shader.cpp  render_context.cpp  render_packet.cpp  render_target_view.cpp  sampler_state.cpp  shadow_handler.cpp  texture.cpp  texture_view.cpp  vertex_buffer.cpp  vertex_shader.cpp
src/input/: CMakeLists.txt
src/input/include/input/: camera_base.h  input_enums.h  input_handler.h  input_handler_types.h  orthographic_camera.h  perspective_camera.h
src/input/src/: camera_base.cpp  input_handler.cpp  input_handler_types.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: cube.h  game_application.h  game_object.h  light_source.h  systemclass.h  world.h  xbot.h
src/renderer/src/: cube.cpp  game_application.cpp  game_object.cpp  light_source.cpp  systemclass.cpp  world.cpp  xbot.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: assert.h  logger.h  stb_image.h  string_util.h
src/utils/src/: assert.cpp  logger.cpp  string_util.cpp
